Creación de esqueleteado

--- a/html/video/player-video.html
+++ b/html/video/player-video.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video</title>
     <link rel="stylesheet" href="../styles.css">
+    <link rel="shortcut icon" href="../../Icono.svg" type="image/x-icon" />
 </head>
 <body>
   <header class="header">
       <button class="parent-control">Control Parental</button>
-      <button class="profile-btn"><img src="../src/img/" alt=""></button>
+      <button class="profile-btn"><img src="../../src/img/Perfil.svg" alt=""></button>
   </header>
 
     <aside class="sidebar">
@@ -37,9 +38,9 @@
       </div>
 
       <div class="action-buttons">
-        <button>Ver</button>
-        <button>Leer</button>
-        <button>Escuchar</button>
+        <a class="btn btn_video">Ver</a>
+        <a class="btn btn_lectura">Leer</a>
+        <a class="btn btn_audio">Escuchar</a>
       </div>
     </main>
 
