--- a/html/video/player-audio.html
+++ b/html/video/player-audio.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Paquito - Reproductor de Audio</title>
+  <title>Audio</title>
   <link rel="stylesheet" href="../styles.css" />
+  <link rel="shortcut icon" href="../../Icono.svg" type="image/x-icon" />
 </head>
 <body>
   <header class="header">
