--- a/html/video/player-historia.html
+++ b/html/video/player-historia.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video</title>
+    <title>Historia</title>
 </head>
 <body>
     <header>
-      <ul class="navbar">
-        <li class="navbar_elem">
-          <a href="#" class="elem_link">Control Parental</a>
-        </li>
-        <li class="navbar_elem">
-          <a href="#" class="elem_link">Perfil</a>
-        </li>
-      </ul>
-    </header>
+  <header class="header">
+      <button class="parent-control">Control Parental</button>
+      <button class="profile-btn"><img src="../../src/img/Perfil.svg" alt=""></button>
+  </header>
 
     <main>
         <aside class="navbar_aside">
