Mejroa de esqueleteado

--- a/html/about.html
+++ b/html/about.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="../styles.css">
+  <link rel="shortcut icon" href="Icono.svg" type="image/x-icon" />
   <style>
     * {
       box-sizing: border-box;
@@ -90,8 +91,8 @@
 </head>
 <body>
     <header class="header">
-      <button class="parent-control">Control Parental</button>
-      <button class="profile-btn"><img src="../../src/img/Perfil.svg" alt=""></button>
+      <button class="parent-control"><a class="button-a" href="/html/controlParent.html">Control Parental</a></button>
+      <button class="profile-btn"><a class="button-a" href="perfil.html"><img src="../../src/img/Perfil.svg" alt=""></a></button>
     </header>
 
   <section class="section background-section">
@@ -122,7 +123,7 @@
       <p>Este proyecto fue desarrollado por 3 estudiantes de la Universidad Nacional de Ingeniería (UNI): tres del área de Ingeniería en Sistemas, y una estudiante de Diseño Gráfico. Juntos combinan tecnología y creatividad para dar vida a Paquito.</p>
     </div>
     <div class="image">
-      <img src="paquito-equipo.png" alt="Equipo de Paquito">
+      <img src="../src/img/About4.png" alt="Equipo de Paquito">
     </div>
   </section>
 
@@ -158,7 +159,7 @@
       </div>
     </div>
     <div class="image">
-      <img src="paquito-app.png" alt="App de Paquito">
+      <img src="../src/img/About3.png" alt="App de Paquito">
     </div>
   </section>
 
@@ -169,7 +170,7 @@
       <p>Preservamos las narraciones tradicionales digitalizándolas en formatos multimedia accesibles y atractivos.</p>
     </div>
     <div class="image">
-      <img src="paquito-impacto.png" alt="Impacto de Paquito">
+      <img src="../src/img/About5.gif" alt="Impacto de Paquito">
     </div>
   </section>
 
