--- a/html/video/player-video.html
+++ b/html/video/player-video.html
@@ -3,24 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video</title>
-    <link rel="stylesheet" href="../styles.css">
+    <title>Viendo con Paquito</title>
+    <link rel="stylesheet" href="../../styles.css">
     <link rel="shortcut icon" href="../../Icono.svg" type="image/x-icon" />
 </head>
 <body>
   <header class="header">
-      <button class="parent-control">Control Parental</button>
-      <button class="profile-btn"><img src="../../src/img/Perfil.svg" alt=""></button>
+      <button class="parent-control"><a class="button-a" href="#">Control Parental</a></button>
+      <button class="profile-btn"><a class="button-a" href="../perfil.html"><img src="../../src/img/Perfil.svg" alt=""></a></button>
   </header>
 
     <aside class="sidebar">
-      <button class="icon-button icon-inicio"><img src="../src/img/Inicio.svg" alt="Inicio" /></button>
-      <button class="icon-button icon-game"><img src="../src/img/Game.svg" alt=""></button>
-      <button class="icon-button icon-media"><img src="../src/img/MultMedia.svg" alt=""></button>
+      <button class="icon-button icon-inicio">
+        <a class="button-a" href="../../index.html">
+          <img src="../../src/img/Inicio.svg" alt="Inicio" />
+        </a>
+      </button>
+      <button class="icon-button icon-game">
+        <a class="button-a" href="../game/games.html">
+          <img src="../../src/img/Game.svg" alt="">
+        </a></button>
+      <button class="icon-button icon-media">
+        <a class="button-a" href="../video/videos.html">
+          <img src="../../src/img/MultMedia.svg" alt="">
+        </a></button>
     </aside>
 
     <main class="reproductor-video">
-      <video id="video" src="../src/video/Los Cadejos.mp4">
+      <video id="video" src="../../src/video/Los Cadejos.mp4">
         Tu navegador no soporta el elemento de video.
       </video>
 
@@ -43,37 +53,6 @@
         <a class="btn btn_audio">Escuchar</a>
       </div>
     </main>
-
-        <!-- <aside class="navbar_aside">
-            <a class="btn btn-circular btn-inicio">Inicio</a>
-            <a class="btn btn-circular btn-juegos">Juegos</a>
-            <a class="btn btn-circular btn-media">Media</a>
-        </aside>
-        <section class="section_video">
-            <h1 class="heading_titulo">Paquito te cuenta</h1>
-            <p class="heading_descipcion">Un lugar para que los más pequeños aprendan y se diviertan</p>
-
-            <div class="video_container">
-                <video controls>
-                    <source class="video" src="../src/video/Los Cadejos.mp4" type="video/mp4">
-                    Tu navegador no soporta el elemento de video.
-                </video>
-            </div>
-
-              <div class="controls video-controls">
-                <button id="retroceder" class="control-btn">⏪</button>
-                <button id="playPause" class="control-btn">⏯️</button>
-                <button id="avanzar" class="control-btn">⏩</button>
-                <button id="muteToggle" class="control-btn">🔊</button>
-                <button id="fullscreen" class="control-btn">⛶</button>
-              </div>
-
-            <div class="buttons">
-                <button class="btn btn_video">Ver</button>
-                <button class="btn btn_lectura">Leer</button>
-                <button class="btn btn_audio">Escuchar</button>
-            </div>
-        </section> -->
     </main>
   <script src="../scripts.js"></script>
 </body>
