--- a/index.html
+++ b/index.html
@@ -13,14 +13,8 @@
   </head>
   <body>
     <header>
-      <ul class="navbar">
-        <li class="navbar_elem">
-          <a href="#" class="elem_link">Control Parental</a>
-        </li>
-        <li class="navbar_elem">
-          <a href="#" class="elem_link">Perfil</a>
-        </li>
-      </ul>
+      <button class="parent-control"><a class="button-a" href="#">Control Parental</a></button>
+      <button class="profile-btn"><a class="button-a" href="perfil.html"><img src="../../src/img/Perfil.svg" alt=""></a></button>
     </header>
     <!-- Separador -->
     <main>
